Rewrite release documentation for newcomers
- replace the whole-bucket first run with a small public prefix
- separate the full-scale demonstration and record its provenance
- clarify live-listing consistency, cost, supported backends, output, and resume
- align roadmap, contributor guidance, release notes, and args_hash documentation
- add documentation command, link-target, and wording regression tests
- move recovered working notes into the maintained notes hierarchy

Signed-off-by: Sagi Bashari <sagi@varve.io>